--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 #logo{
     max-height: 200%;
     max-width: 200%;
-    padding-bottom: 1%;
+    padding-bottom: 25%;
 }
 
 /*Section Styles*/
@@ -41,14 +41,14 @@ html {
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background: #2ecc71;
+    background: #ecf0f1;
 }
 
 .about-section {
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background: #ecf0f1;
+    background: #2ecc71;
 }
 
 .services-section {
@@ -65,36 +65,21 @@ html {
     background: #e74c3c;
 }
 
-/*Social Media Icon Styles*/
-.social-slide {
-    height: 48px;
-    width: 48px;
-    margin: 10px;
-    float: left;
-    display: inline;
-    -webkit-transition: all ease 0.3s;
-    -moz-transition: all ease 0.3s;
-    -o-transition: all ease 0.3s;
-    -ms-transition: all ease 0.3s;
-    transition: all ease 0.3s;
+#social-pics{
+    padding-right: 0;
 }
-.social-slide:hover {
-    background-position: 0px -48px;
-    box-shadow: 0px 0px 4px 1px rgba(0,0,0,0.8);
+.facebook:hover{
+    opacity: 0.7;
 }
-.facebook{
-    background-image: url("img/social/facebook.png");
-
+.twitter:hover{
+    opacity: 0.7;
 }
-.twitter{
-    background-image: url("img/social/twitter.png");
+.linkedin:hover{
+    opacity: 0.7;
 }
-.linkedin{
-    background-image: url("img/social/linkedin.png");
+.github:hover{
+    opacity: 0.7;
 }
-.github{
-    background-image: url("img/social/github.png");
-}
-.gmail{
-    background-image: url("img/social/gmail.png");
+.gmail:hover{
+    opacity: 0.7;
 }
