--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* NAVBAR STYLES */
 .navbar-inverse .navbar-nav>li>a{
     color: white;
-    font-family: "Calibre";
+    font-family: "Comic Sans MS";
     font-weight: bold;
     font-size: 1.5em;
 }
@@ -19,8 +19,8 @@
 }
 #aaron{
     color: white;
-    font-family: "Calibre";
-    font-weight: bold;
+    font-family: "Comic Sans MS";
+    font-style: italic;
     font-size: 1.5em;
 }
 /* Styles for animated underlining */
@@ -63,10 +63,13 @@ html {
 }
 /*Intro Section Styles*/
 .intro {
-    height: 100%;
+    min-height: 100%;
+    max-height: 200%;
+    height: auto !important;
+    
     padding-top: 150px;
     text-align: center;
-    //background: #ecf0f1;
+    /*background: #ecf0f1;*/
     background-color: #222222;
 }
 header{
@@ -79,25 +82,39 @@ header{
 }
 
 .about-section {
-    height: 100%;
+    min-height: 100%;
+    max-height: 200%;
+    height: auto !important;
+    
     padding-top: 150px;
     text-align: center;
     background: #2ecc71;
 }
 /*Portfolio Styles*/
 .portfolio-section {
-    height: 100%;
+    min-height: 100%;
+    max-height: 300%;
+    height: auto !important;
+    
     padding-top: 150px;
     text-align: center;
     background: #3498db;
 }
 
-
+/*Contact Styles*/
 .contact-section {
-    height: 100%;
+    min-height: 100%;
+    max-height: 200%;
+    height: auto !important;
+    
     padding-top: 150px;
     text-align: center;
-    background: #e74c3c;
+    background-color: #222222;
+}
+#contact-panel{
+    background: #ecf0f1;
+    width: 50%;
+    margin-left: 25%;
 }
 
 /* Social Media Styles */
