--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 .navbar-inverse .navbar-nav>li>a{
     color: white;
     font-family: 'Titillium Web', sans-serif;
-    font-weight: bold;
+
     font-size: 1.5em;
 }
 .navbar-inverse .navbar-nav>li>a:hover{
@@ -113,8 +113,13 @@ header{
 }
 #contact-panel{
     background: #ecf0f1;
-    width: 50%;
-    margin-left: 25%;
+    width: 40%;
+    margin-left: 30%;
+    border-radius: 3%;
+}
+#contact-panel:hover{
+    
+    background: #C8DCDD;
 }
 
 /* Social Media Styles */
