--- a/css/style.css
+++ b/css/style.css
@@ -94,10 +94,12 @@ header{
 }
 #about_panel{
     background-color: #F3F3F3;
-    width: 40%;
+    width: 32%;
+    min-width: 200px;
+    padding-bottom: 10%;
     font-family: 'Hind', sans-serif;
     font-size: 1.2em;
-    margin-left: 30%;
+    margin: 0 auto 0 35%;
     -webkit-border-radius: 6%;
 }
 #aaron_img{
@@ -129,6 +131,8 @@ header{
     border: 5px solid #4d94ff;
 }
 .thumbnail{
+    min-height: 100%
+    min-width: 100%;
     width: 70%;
     margin-left: 15%;
 }
@@ -147,11 +151,14 @@ header{
 }
 #contact-panel{
     background: #80c1ff;
-    //background: #ecf0f1;
+    
+    min-width: 250px;
     width: 40%;
     margin-left: 30%;
     -webkit-border-radius: 6%;
-    font-family: Permanent Marker;
+    font-family: 'Roboto', sans-serif;
+    font-decoration: bold;
+    margin: 0 auto;
 }
 #contact-panel:hover{
     opacity: 1;
